scrollbar on ALL pages now to avoid nav bar getting 'cut off'

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,11 +1,11 @@
 #project-container {
     width: 16rem;
-    margin-top: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .project-photo {
     height: 12rem;
-    width: 100%;
+    width: 99%;
     object-fit: cover;
     object-position: center;
     border: 1.3px solid black;
@@ -20,4 +20,11 @@
 .project-text {
     font-size: 0.75rem;
     color: #454545;
+}
+
+@media screen and (min-width: 1300px) {
+    #project-container {
+        width: 16.3rem;
+        margin-bottom: 2rem;
+    }
 }
