--- a/src/pages/home-page/homepage.css
+++ b/src/pages/home-page/homepage.css
@@ -1,8 +1,8 @@
 .projects-cards {
-    /* margin-top: 0.7rem; */
+    margin-top: 0.7rem;
 }
 
 .projects-section {
     margin-top: 3rem;
-    width: 93%;
+    width: 100%;
 }
